--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -95,7 +95,14 @@
       let tokenDisplay = document.getElementById("token");
       let refreshTokenDisplay = document.getElementById("refresh");
       let logoutBtn = document.getElementById("logout");
-      login.addEventListener("click", function () {
+
+      document.addEventListener("DOMContentLoaded", function () {
+        //call refreshTokens: this will, by default, log the user in
+        // if he or she has a valid, non-expired __Host-refresh_token cookie
+        refreshTokens();
+      });
+
+      loginBtn.addEventListener("click", function () {
         const payload = {
           email: document.getElementById("email").value,
           password: document.getElementById("password").value,
@@ -123,6 +130,29 @@
             }
           });
       });
+
+      function refreshTokens() {
+        // we'll send a get request which includes the __Host-refresh-token if it exists
+        const requestOptions = {
+          method: "GET",
+          credentials: "include",
+        };
+
+        fetch("/web/refresh-token", requestOptions)
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.access_token) {
+              access_token = data.access_token;
+              refresh_token = data.refresh_token;
+              setUI(true);
+            } else {
+              setUI(false);
+            }
+          })
+          .catch((error) => {
+            console.log("user is not logged in");
+          });
+      }
 
       function setUI(loggedIn) {
         if (loggedIn) {
