--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -102,6 +102,23 @@
         refreshTokens();
       });
 
+      let refreshRunning = false;
+      let refreshTime = new Date();
+      let secondsRemaining = (600 - refreshTime.getSeconds()) * 1000; //every 10 minutes
+      // let secondsRemaining = (5 - refreshTime.getSeconds()) * 1000; //every 5 seconds
+
+      function autoRefresh() {
+        if (!refreshRunning) {
+          setTimeout(() => {
+            if (access_token !== "") {
+              setInterval(refreshTokens, 10 * 60 * 1000); //every 10 minutes
+              // setInterval(refreshTokens, 5 * 1000); //every 5 seconds
+            }
+          }, secondsRemaining);
+        }
+        refreshRunning = true;
+      }
+
       loginBtn.addEventListener("click", function () {
         const payload = {
           email: document.getElementById("email").value,
@@ -127,6 +144,7 @@
               access_token = data.access_token;
               refresh_token = data.refresh_token;
               setUI(true);
+              autoRefresh();
             }
           });
       });
@@ -145,6 +163,7 @@
               access_token = data.access_token;
               refresh_token = data.refresh_token;
               setUI(true);
+              autoRefresh();
             } else {
               setUI(false);
             }
